<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/helpHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="50sp"
        app:fontFamily="@font/aladin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/designers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designed_by_manav_sharma_amp_payal_payal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/aladin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpHeading" />

    <TextView
        android:id="@+id/discription"
        android:layout_width="488dp"
        android:layout_height="205dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:includeFontPadding="false"
        android:text="@string/discriptions"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="23sp"
        app:fontFamily="@font/concert_one"
        app:layout_constraintBottom_toTopOf="@+id/citationsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/designers"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textCitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discription" />

    <TextView
        android:id="@+id/citationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:text="@string/cita"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discription" />
</androidx.constraintlayout.widget.ConstraintLayout>