<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingTop="10sp"
    android:paddingBottom="10sp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.Game">

    <GridView
        android:id="@+id/gameActivity_grid_stars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/game_label_timeGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_coinFound" />

    <TextView
        android:id="@+id/game_coinFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/abel"
        android:text="@string/gameActivity_CoinsFound"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/game_Size_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameActivity_label_scansUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/abel"
        android:text="@string/gameActivity_Scans_Used"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/game_Size_primary"
        app:layout_constraintBottom_toBottomOf="@+id/game_coinFound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_coinFound" />

    <TextView
        android:id="@+id/game_label_timeGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/abel"
        android:text="@string/gameActivity_Time_GamePlay"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/game_Size_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gameActivity_grid_stars" />

    <TextView
        android:id="@+id/gameActivity_label_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/abel"
        android:text="@string/gameActivity_high_Score"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/game_Size_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gameActivity_grid_stars" />

</androidx.constraintlayout.widget.ConstraintLayout>